Initial commit for task view with mouse wheel

--- a/wolcon/CMakeLists.txt
+++ b/wolcon/CMakeLists.txt
@@ -5,5 +5,4 @@ file(GLOB SOURCES
         src/*.cpp
         src/*.h)
 
-add_executable(Wolcon WIN32
-        ${SOURCES})
+add_executable(Wolcon WIN32 ${SOURCES})
