--- a/wolcon/CMakeLists.txt
+++ b/wolcon/CMakeLists.txt
@@ -3,6 +3,8 @@ project(wolcon)
 
 file(GLOB SOURCES
         src/*.cpp
-        src/*.h)
+        src/*.h
+        src/Events/*.cpp
+        src/Events/*.h)
 
 add_executable(Wolcon WIN32 ${SOURCES})
