added pch and Event class

--- a/wolcon/CMakeLists.txt
+++ b/wolcon/CMakeLists.txt
@@ -7,4 +7,8 @@ file(GLOB SOURCES
         src/Events/*.cpp
         src/Events/*.h)
 
+add_definitions(-DWL_PLATFORM_WINDOWS)
+
 add_executable(Wolcon WIN32 ${SOURCES})
+
+include_directories(src)
