fix second screen scroll up trigger the task view

--- a/wolcon/CMakeLists.txt
+++ b/wolcon/CMakeLists.txt
@@ -5,4 +5,12 @@ file(GLOB SOURCES
         src/*.cpp
         src/*.h)
 
-add_executable(Wolcon WIN32 ${SOURCES})
+set(DEBUG true)
+
+#add_executable(Wolcon WIN32 ${SOURCES})
+if (${DEBUG})
+    add_executable(Wolcon ${SOURCES})
+    add_compile_definitions(CONSOLE)
+else()
+    add_executable(Wolcon WIN32 ${SOURCES})
+endif()
